# Quick-Team-Demo

./: .gitignore  README.md  docker-compose.yml
.githooks/: commit-msg
backend/: Dockerfile  docker-compose.yml  pom.xml
data-engineering/: .dockerignore  .env.example  .gitattributes  Dockerfile  README.md  TEAM_INTEGRATION_GUIDE.md  config.py  entrypoint.sh  etl_pipeline.py  main.py  pyproject.toml  rav.yaml  requirements.txt
data-engineering/docs/: BACKEND_KAFKA_GUIDE.md  DEVOPS_INFRA_GUIDE.md  INCREMENTAL_BACKFILL_SPEC.md  README.md  TEAM_INTEGRATION_GUIDE.md  USER_GUIDE.md  erd.md
data-engineering/scripts/: mock_producer.py  seed_ai_oltp.py  seed_and_publish.py  seed_data.py
data-engineering/src/data_engineering/: __init__.py  config.py
data-engineering/src/data_engineering/ingestion/: __init__.py  consumers.py  extractors.py
data-engineering/src/data_engineering/loading/: __init__.py  models.py  writers.py
data-engineering/src/data_engineering/pipeline/: __init__.py  backfill.py  streaming.py
data-engineering/src/data_engineering/seeding/: __init__.py  ai_oltp.py
data-engineering/src/data_engineering/transformation/: __init__.py  transformers.py
data-engineering/src/data_engineering/utils/: __init__.py  logging.py
data-engineering/tests/: __init__.py  conftest.py
data-engineering/tests/integration/: __init__.py
data-engineering/tests/unit/: test_ai_oltp_seed.py  test_backfill.py  test_config.py  test_consumers.py  test_seed_and_publish.py  test_seed_data.py  test_streaming.py  test_transformers.py  test_watermarks.py
frontend/: .gitignore  (+6 more)
(+171 files in other folders)
